db and server port props added

--- a/spring-boot-hello-world/spring-boot-hello-world/src/main/resources/application.properties
+++ b/spring-boot-hello-world/spring-boot-hello-world/src/main/resources/application.properties
@@ -1,1 +1,22 @@
 spring.application.name=spring-boot-hello-world
+
+# Adding app name from env props
+# spring.application.name=${APP_NAME:default_name}, while executing the appln, giving as
+# SET APP_NAME=Spring-Boot, then run the file
+# java -jar .\spring-file-snapshot.jar, if app_name not provided, it takes the value as "default_name"
+
+# using cmd line: java -jar .\spring-file-snapshot.jar --spring.application.name=MyApp
+
+# =============> SERVER PORT <===============
+
+# if given port as value=0, then it takes the port numbers as random values.
+# server.port=0 or any value of our wish, like 8181
+
+# =============> DATA BASE CONNECT <==============
+#spring.datasource.url=jdbc:postgresql://localhost:5432/libraryDB
+#spring.datasource.username=postgres
+#spring.datasource.password=postgres
+#spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+#spring.jpa.hibernate.ddl-auto=update
+
+
