Adding custom properties from app props

--- a/spring-boot-hello-world/spring-boot-hello-world/src/main/resources/application.properties
+++ b/spring-boot-hello-world/spring-boot-hello-world/src/main/resources/application.properties
@@ -1,1 +1,7 @@
 spring.application.name=spring-boot-hello-world
+
+mail.from=Java Programmer
+mail.to=java_group
+# for the variables, with more than 2 key words, we can make work them using hyphen.
+mail.default-object= This is a default object
+
