Library Management Spring Application deployed success

--- a/library-management-system/library-management-system/src/main/resources/application.properties
+++ b/library-management-system/library-management-system/src/main/resources/application.properties
@@ -4,3 +4,6 @@ spring.datasource.username=postgres
 spring.datasource.password=Abhishek@147
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
+
+error.whitelabel.enabled=false
+server.error.whitelabel.enabled=false
